[gd_scene load_steps=11 format=3 uid="uid://rdd8r8vrk3cb"]

[ext_resource type="Texture2D" path="res://addons/godot-idea-board/icon/handle.svg" id="1_hiwoi"]
[ext_resource type="Script" path="res://addons/godot-idea-board/group_node.gd" id="1_m4t2i"]
[ext_resource type="StyleBox" uid="uid://b06cmyqqc77jv" path="res://addons/godot-idea-board/theme/group_frame_stylebox.tres" id="2_bq8a8"]
[ext_resource type="Script" path="res://addons/godot-idea-board/context_menu/group_menu.gd" id="2_bqeb5"]
[ext_resource type="StyleBox" uid="uid://cif6pdlua51vx" path="res://addons/godot-idea-board/theme/group_selected_frame_stylebox.tres" id="3_g6olt"]
[ext_resource type="StyleBox" uid="uid://chihapvyjmh2o" path="res://addons/godot-idea-board/theme/transparent_title_line_edit.tres" id="5_gmg6p"]
[ext_resource type="StyleBox" uid="uid://c0ptw6jphi0td" path="res://addons/godot-idea-board/theme/transparent_title_selected_line_edit.tres" id="6_qoikp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oww0u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nyojw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fcp3l"]

[node name="GroupNode" type="GraphNode"]
offset_right = 178.0
offset_bottom = 103.0
mouse_default_cursor_shape = 13
theme_override_icons/resizer = ExtResource("1_hiwoi")
theme_override_styles/panel = ExtResource("2_bq8a8")
theme_override_styles/panel_selected = ExtResource("3_g6olt")
theme_override_styles/titlebar = SubResource("StyleBoxEmpty_oww0u")
theme_override_styles/titlebar_selected = SubResource("StyleBoxEmpty_nyojw")
theme_override_styles/slot = SubResource("StyleBoxEmpty_fcp3l")
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("1_m4t2i")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="SelectButton" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
icon_alignment = 1

[node name="IconTextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
stretch_mode = 5

[node name="HeaderLineEdit" type="LineEdit" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
mouse_default_cursor_shape = 13
theme_override_styles/normal = ExtResource("5_gmg6p")
theme_override_styles/focus = ExtResource("6_qoikp")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
alignment = 2

[node name="LockedButton" type="Button" parent="MarginContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_default_cursor_shape = 2
icon_alignment = 1

[node name="ContextMenu" type="PopupMenu" parent="."]
script = ExtResource("2_bqeb5")
